update button design and services layout. Also fix overflowing about image

--- a/ee.scss
+++ b/ee.scss
@@ -17,7 +17,6 @@ $color-orange: hsl(30, 100%, 55%);
   font-size: 0.8em;
   background: rgba(111, 111, 111, 0);
   padding: 0.6em 0.6em;
-  width: 50%;
   border: 0.1em solid #ffffff;
   text-decoration: none;
   color: #ffffff;
@@ -100,6 +99,8 @@ $color-orange: hsl(30, 100%, 55%);
   right: 0em;
   cursor: pointer;
   background: url("cool-background.png") no-repeat top;
+  border-radius: 6%;
+  z-index: 2;
 }
 
 //HAMBURGER START//
@@ -145,12 +146,12 @@ $color-orange: hsl(30, 100%, 55%);
   align-items: center;
   img {
     width: 100%;
-    max-width: 400px;
+    max-width: 320px;
   }
   h1 {
     font-family: century-gothic-regular;
     font-weight: 100;
-    font-size: 1.5em;
+    font-size: 1.3em;
     text-align: center;
   }
 }
@@ -170,15 +171,19 @@ $color-orange: hsl(30, 100%, 55%);
     color: white;
     max-width: 800px;
     text-align: center;
-    padding: 0px 20px;
-    button {
-      margin-bottom: 3%;
+    padding: 0px 20px 60px 20px;
+    h4 {
+      padding-bottom: 20px;
+    }
+    a {
+      font-size: 1em;
+      padding: 20px 60px;
     }
   }
   img {
     margin: 1em;
     border: 0.5em solid white;
-    width: 100%;
+    width: 80%;
     max-width: 20em;
     border-radius: 50%;
   }
@@ -225,7 +230,7 @@ $color-orange: hsl(30, 100%, 55%);
   border: 1px solid white;
   margin: 0.2em;
   height: 250px;
-  min-width: 150px;
+  min-width: 110px;
   width: 100%;
   box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.1);
   color: white;
@@ -244,10 +249,15 @@ $color-orange: hsl(30, 100%, 55%);
   h1 {
     align-items: stretch;
     padding-top: 20px;
-    font-size: 0.8em;
+    font-size: 0.9em;
+  }
+  .see-more-mobile {
+    position: absolute;
+    bottom: 10%;
   }
   .service-desc {
-    width: 100%;
+    visibility: hidden;
+    width: 98%;
     display: flex;
     flex-direction: column;
     font-size: 0.6em;
@@ -258,34 +268,32 @@ $color-orange: hsl(30, 100%, 55%);
       rgba(255, 139, 0, 0.5) 35%,
       rgba(255, 190, 0, 0.5) 100%
     );
-    button {
+    border: 1px solid white;
+    a {
+      width: 50%;
       margin-top: 4%;
+      padding-top: 3%;
+      text-shadow: none;
     }
   }
 }
 .panel1 {
-  background-image: url(https://res.cloudinary.com/mtreeves24/image/upload/v1591306277/Exotic%20Explorers/Tito_1.webp);
+  background-image: url("https://res.cloudinary.com/mtreeves24/image/upload/v1591306277/Exotic%20Explorers/Tito_1.webp");
 }
 .panel2 {
-  background-image: url(https://res.cloudinary.com/mtreeves24/image/upload/v1591306275/Exotic%20Explorers/thumbnail_Image-4.webp);
+  background-image: url("https://res.cloudinary.com/mtreeves24/image/upload/v1591306275/Exotic%20Explorers/thumbnail_Image-4.webp");
 }
 .panel3 {
-  background-image: url(
-    https://res.cloudinary.com/mtreeves24/image/upload/c_scale,
-    w_741/v1591306278/Exotic%20Explorers/tiddlywink_web.webp
-  );
+  background-image: url("https://res.cloudinary.com/mtreeves24/image/upload/c_scale,w_741/v1591306278/Exotic%20Explorers/tiddlywink_web.webp");
 }
 .panel4 {
-  background-image: url(
-    https://res.cloudinary.com/mtreeves24/image/upload/c_scale,
-    w_1019/v1591306277/Exotic%20Explorers/zebra_leg.webp
-  );
+  background-image: url("https://res.cloudinary.com/mtreeves24/image/upload/c_scale,w_1019/v1591306277/Exotic%20Explorers/zebra_leg.webp");
 }
 .panel5 {
-  background-image: url(https://res.cloudinary.com/mtreeves24/image/upload/v1591306261/Exotic%20Explorers/barn_owl_web.webp);
+  background-image: url("https://res.cloudinary.com/mtreeves24/image/upload/v1591306261/Exotic%20Explorers/barn_owl_web.webp");
 }
 .panel6 {
-  background-image: url(https://res.cloudinary.com/mtreeves24/image/upload/v1591306276/Exotic%20Explorers/thumbnail_IMG_1128.webp);
+  background-image: url("https://res.cloudinary.com/mtreeves24/image/upload/v1591306276/Exotic%20Explorers/thumbnail_IMG_1128.webp");
 }
 
 // /* Flex Items */
@@ -329,6 +337,7 @@ $color-orange: hsl(30, 100%, 55%);
 }
 
 .bouncing-finger {
+  visibility: hidden;
   animation: bouncing 1s infinite ease-in-out;
   top: 50%;
   height: 50px;
@@ -379,7 +388,14 @@ $color-orange: hsl(30, 100%, 55%);
         font-size: 2rem;
         align-items: stretch;
       }
+      .bouncing-finger {
+        visibility: visible;
+      }
+      .see-more-mobile {
+        visibility: hidden;
+      }
       .service-desc {
+        visibility: visible;
         padding: 0px 5px;
         font-size: 1.2em;
       }
